[gd_scene load_steps=3 format=2]

[ext_resource path="res://layout/track/layout_section_inspector.gd" type="Script" id=1]
[ext_resource path="res://tools/selector.gd" type="Script" id=2]

[node name="LayoutSectionInspector" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
offset_right = 156.0
offset_bottom = 14.0
text = "Track segment selection"

[node name="CreateBlock" type="Button" parent="."]
offset_top = 18.0
offset_right = 156.0
offset_bottom = 38.0
text = "Create block"

[node name="AddSensor" type="Button" parent="."]
offset_top = 42.0
offset_right = 156.0
offset_bottom = 62.0
text = "Add sensor"

[node name="AddPortal" type="Button" parent="."]
offset_top = 66.0
offset_right = 156.0
offset_bottom = 86.0
text = "Add portal to..."

[node name="AddCrossing" type="Button" parent="."]
offset_top = 90.0
offset_right = 156.0
offset_bottom = 110.0
text = "Add level crossing"

[node name="OneWayCheckbox" type="CheckBox" parent="."]
offset_top = 114.0
offset_right = 156.0
offset_bottom = 138.0
text = "one way"

[node name="Label2" type="Label" parent="."]
offset_top = 142.0
offset_right = 156.0
offset_bottom = 156.0
text = "Limit orientation"

[node name="FacingFilterSelector" type="OptionButton" parent="."]
offset_top = 160.0
offset_right = 156.0
offset_bottom = 180.0
script = ExtResource( 2 )
none_label = "Off"

[node name="SensorPanel" type="PanelContainer" parent="."]
offset_top = 184.0
offset_right = 156.0
offset_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="SensorPanel"]
offset_left = 7.0
offset_top = 7.0
offset_right = 149.0
offset_bottom = 129.0

[node name="SensorInspector" type="VBoxContainer" parent="SensorPanel"]
offset_left = 7.0
offset_top = 7.0
offset_right = 149.0
offset_bottom = 129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SensorPanel/SensorInspector"]
offset_right = 142.0
offset_bottom = 14.0
text = "Sensor"

[node name="RemoveSensor" type="Button" parent="SensorPanel/SensorInspector"]
offset_top = 18.0
offset_right = 142.0
offset_bottom = 38.0
text = "Remove"

[node name="Label2" type="Label" parent="SensorPanel/SensorInspector"]
offset_top = 42.0
offset_right = 142.0
offset_bottom = 56.0
text = "Marker color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarkerSelect" type="OptionButton" parent="SensorPanel/SensorInspector"]
offset_top = 60.0
offset_right = 142.0
offset_bottom = 80.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="SensorPanel/SensorInspector"]
offset_top = 84.0
offset_right = 142.0
offset_bottom = 98.0
text = "Speed"

[node name="SpeedSelect" type="OptionButton" parent="SensorPanel/SensorInspector"]
offset_top = 102.0
offset_right = 142.0
offset_bottom = 122.0
script = ExtResource( 2 )
has_none = false

[node name="CreateBlockPopup" type="PopupPanel" parent="."]
offset_top = 66.0
offset_right = 123.0
offset_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="CreateBlockPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 119.0
offset_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreateBlockPopup/VBoxContainer"]
offset_right = 115.0
offset_bottom = 14.0
size_flags_horizontal = 3
text = "Enter block name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="CreateBlockPopup/VBoxContainer"]
offset_top = 18.0
offset_right = 115.0
offset_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CreateBlockPopup/VBoxContainer"]
offset_top = 46.0
offset_right = 115.0
offset_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockCancelButton" type="Button" parent="CreateBlockPopup/VBoxContainer/HBoxContainer"]
offset_right = 55.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockOKButton" type="Button" parent="CreateBlockPopup/VBoxContainer/HBoxContainer"]
offset_left = 59.0
offset_right = 115.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OK"

[connection signal="pressed" from="CreateBlock" to="." method="_on_CreateBlock_pressed"]
[connection signal="pressed" from="AddSensor" to="." method="_on_AddSensor_pressed"]
[connection signal="pressed" from="AddPortal" to="." method="_on_AddPortal_pressed"]
[connection signal="pressed" from="AddCrossing" to="." method="_on_AddCrossing_pressed"]
[connection signal="toggled" from="OneWayCheckbox" to="." method="_on_OneWayCheckbox_toggled"]
[connection signal="meta_selected" from="FacingFilterSelector" to="." method="_on_FacingFilterSelector_meta_selected"]
[connection signal="pressed" from="SensorPanel/SensorInspector/RemoveSensor" to="." method="_on_RemoveSensor_pressed"]
[connection signal="item_selected" from="SensorPanel/SensorInspector/MarkerSelect" to="." method="_on_MarkerSelect_item_selected"]
[connection signal="meta_selected" from="SensorPanel/SensorInspector/SpeedSelect" to="." method="_on_SpeedSelect_meta_selected"]
[connection signal="pressed" from="CreateBlockPopup/VBoxContainer/HBoxContainer/BlockCancelButton" to="." method="_on_BlockCancelButton_pressed"]
[connection signal="pressed" from="CreateBlockPopup/VBoxContainer/HBoxContainer/BlockOKButton" to="." method="_on_BlockOKButton_pressed"]
